# python-project

./: .flake8  .gitignore  .pre-commit-config.yaml  .secrets.baseline  CONTRIBUTING.md  Dockerfile  LICENSE  Makefile  README.md  pyproject.toml  requirements-dev.txt  requirements.txt
examples/: __init__.py  resource_demo.py
src/template_python_project/: __init__.py  __main__.py  main.py  resource_utils.py
src/template_python_project/resources/: README.md  config.toml  data.json  sample_data.csv
src/template_python_project/resources/templates/: create_user_table.sql  welcome_email.txt
tests/: __init__.py  test_main.py  test_resource_utils.py
